2012-11-23 [twolife]	0.0.2
	* evolution-data-server 3.6

2009-05-06 [holger]	0.0.1
	* initial import