@@ -1,3 +1,4 @@
-Holger Berndt <berndth@gmx.de>
+addressbook: Holger Berndt <berndth@gmx.de>
+libsecret: Sébastien Noel <sebastien@twolife.be>
 
 See ChangeLog for additional supporters.
