@@ -1,3 +1,6 @@
+2016-10-17 [twolife]	0.2.0
+	* replace gnome-keyring support by libsecret
+
 2012-11-23 [twolife]	0.0.2
 	* evolution-data-server 3.6
 
